# linkml-generate

./: LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: main.yaml
src/linkml_generate/: cli.py
src/linkml_generate/engines/: datamaker_engine.py
tests/: __init__.py
tests/input/: README.md  food.yaml
tests/output/: README.md
